--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>Homework1</title>
 </head>
+
 <body>
-    <h1>Домашнее задание</h1>
+    <header class="header">
+        <section class="header__header-box">
+            <h1 class="header-box_title">Добро пожаловать на мой сайт !</h1>
+            <p class="header-box_content">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и
+                приступай</p>
+            <div class="header-box__buttons-box">
+                <button class="buttons-box_button">Поехали!</button>
+            </div>
+        </section>
+    </header>
 </body>
+
 </html>
