--- a/index.html
+++ b/index.html
@@ -8,20 +8,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Homework1</title>
 </head>
 
 <body>
-    <header class="header">
+    <header class="header center">
         <section class="header__header-box">
             <h1 class="header-box_title">Добро пожаловать на мой сайт !</h1>
-            <p class="header-box_content">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и
-                приступай</p>
+            <span class="header-box_content">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай
+                <b>поехали</b> и
+                <b> приступай</b></span>
             <div class="header-box__buttons-box">
                 <button class="buttons-box_button">Поехали!</button>
             </div>
         </section>
     </header>
+    <nav class="nav center">
+        <div class="nav__game game1">
+            <p class="nav__game_text"> Игра 1</p>
+        </div>
+        <div class="nav__game game2">
+            <p class="nav__game_text"> Игра 2</p>
+        </div>
+        <div class="nav__game game3">
+            <p class="nav__game_text"> Игра 3</p>
+        </div>
+    </nav>
 </body>
 
 </html>
