--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
             <p class="nav__game_text">Игра 3</p>
         </div>
     </nav>
+
+    <section class="middle-top center">
+        <div class="middle-top__left">
+            <h2 class="middle-top__left_title">Времена года!</h2>
+            <p class="middle-top__left_text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к
+                какому времени года он относится</p>
+            <div class="middle-top__left_button-box">
+                <button onclick="game1()" class="buttons-box_buttonGameOne">Играть!</button>
+            </div>
+        </div>
+        <div class="middle-top__right">
+            <img class="game1-img" src="img/video_game.png" alt="picture">
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
