changed index.html etc.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
             <img class="game1-img" src="img/video_game.png" alt="picture">
         </div>
     </section>
+    <section class="middle-middle center">
+        <div class="middle-middle__left">
+            <img class="game1-img" src="img/video_game2.png" alt="picture">
+        </div>
+        <div class="middle-middle__right">
+
+            <h2 class="middle-middle__right_title">Запомни слова</h2>
+            <p class="middle-middle__right_text">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо запомнить.</p>
+            <div class="middle-middle__right_button-box">
+                <button onclick="game2()" class="buttons-box_buttonGameOne">Играть!</button>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 
