--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header center">
         <section class="header__header-box">
-            <h1 class="header-box_title">Добро пожаловать на мой сайт !</h1>
+            <h1 class="header-box_title">Добро пожаловать на сайт разработчика Дениса!</h1>
             <span class="header-box_content">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай
                 <b>поехали</b> и
                 <b> приступай</b></span>
